<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="370px"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="city" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <View
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_delete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Delete"/>

        <Button
            android:id="@+id/button_weather"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Weather"/>

        <Button
            android:id="@+id/button_map"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Map"/>

    </LinearLayout>
</LinearLayout>